--- a/下载必读.md
+++ b/下载必读.md
@@ -1,5 +1,5 @@
 # jxc-manager
-项目运行地址：http://120.24.87.118:8989/
+项目运行地址：http://120.24.87.118:8989/（已经kill）
 ###  **添加QQ：1040580896。star获取数据库
 ** 
 获取账户密码
